--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -327,6 +327,7 @@ BGL_CORE_H = \
   util/time.h \
   util/tokenpipe.h \
   util/trace.h \
+  util/transaction_identifier.h \
   util/translation.h \
   util/types.h \
   util/ui_change_type.h \
