--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -807,10 +807,11 @@ jobs:
           ./autogen.sh && ./configure --prefix=${{ env.CI_INSTALL }} && make clean && make install && ls -RlAh ${{ env.CI_INSTALL }}
           gcc -o ecdsa examples/ecdsa.c $(PKG_CONFIG_PATH=${{ env.CI_INSTALL }}/lib/pkgconfig pkg-config --cflags --libs libsecp256k1) -Wl,-rpath,"${{ env.CI_INSTALL }}/lib" && ./ecdsa
 
-      - name: Check installation with CMake
-        env:
-          CI_BUILD: ${{ runner.temp }}/${{ github.run_id }}${{ github.action }}/build
-          CI_INSTALL: ${{ runner.temp }}/${{ github.run_id }}${{ github.action }}/install
-        run: |
-          cmake -B ${{ env.CI_BUILD }} -DCMAKE_INSTALL_PREFIX=${{ env.CI_INSTALL }} && cmake --build ${{ env.CI_BUILD }} --target install && ls -RlAh ${{ env.CI_INSTALL }}
-          gcc -o ecdsa examples/ecdsa.c -I ${{ env.CI_INSTALL }}/include -L ${{ env.CI_INSTALL }}/lib*/ -l secp256k1 -Wl,-rpath,"${{ env.CI_INSTALL }}/lib",-rpath,"${{ env.CI_INSTALL }}/lib64" && ./ecdsa
+      - name: Run functional tests
+        # Don't run functional tests for pull requests.
+        # The test suit regularly fails to complete in windows native github
+        # actions as a child process stops making progress. The root cause has
+        # not yet been determined.
+        # Discussed in https://github.com/bitcoin/bitcoin/pull/28509
+        if: github.event_name != 'pull_request'
+        run: py -3 test\functional\test_runner.py --jobs $env:NUMBER_OF_PROCESSORS --ci --quiet --tmpdirprefix=$env:RUNNER_TEMP --combinedlogslen=99999999 --timeout-factor=$env:TEST_RUNNER_TIMEOUT_FACTOR --extended
